--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -12,7 +12,7 @@ on:
       set_release:
         description: "Select OS Release."
         required: false
-        default: "jammy"
+        default: "bookworm"
         type: choice
         options:
           - jammy
@@ -25,7 +25,7 @@ on:
         default: "all"
         type: choice
         options:
-          - all
+          - 全部
           - s905w_s905x_s905mb_s905l3a_s905l3b_s905x2_s905x3_s912_s922x_s922x-ct2000_s922x-reva
           - s905x3-x88-pro-x3_s912-m8s-pro_s905x-t95_s912-t95z-plus_s905l3-unt400g1_s905lb-r3300l
           - tanix-tx6_tb-ls3399_tn3399_tpm312_tqc-a01_tvi3315a_vplus_xiaobao_zcube1-max_zk-r39a_zysj
@@ -173,7 +173,7 @@ on:
       armbian_kernel:
         description: "Select kernel version."
         required: false
-        default: "6.1.y_6.6.y"
+        default: "6.6.y"
         type: choice
         options:
           - 5.4.y
@@ -191,10 +191,11 @@ on:
       kernel_repo:
         description: "Set the kernel repository."
         required: false
-        default: "ophub/kernel"
+        default: "LemonCrab666/kernel"
         type: choice
         options:
           - ophub/kernel
+          - LemonCrab666/kernel
       kernel_usage:
         description: "Set the tags of the stable kernel."
         required: false
@@ -224,12 +225,13 @@ on:
       builder_name:
         description: "Set Armbian builder signature."
         required: false
-        default: "ophub"
+        default: "LemonCrab"
         type: choice
         options:
           - ophub
           - angel
           - yourname
+          - LemonCrab
 
 env:
   TZ: America/New_York
